[CF-22] Envoy gateway and cicds
